<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Audio Spectrum Analyzer</string>
    <string name="preferences">Preferences</string>

    <!-- Main UI -->
    <string name="textview_RMS_text">RMS:dB \n-XXX.X</string>
    <string name="textview_cur_text" >Cur :XXXXX.XHz(AX#+XX) -XXX.XdB</string>
    <string name="text_cur">Cur :</string>
    <string name="textview_peak_text">Peak:XXXXX.XHz(AX#+XX) -XXX.XdB</string>
    <string name="text_peak">Peak:</string>
    <string name="textview_rec_text">Rec: 00:00:00.0, Remain: 0000:00:00</string>
    <string name="text_rec">Rec:</string>
    <string name="text_remain">", Remain: "</string>
    <string name="sample_s">SAMPLE/S</string>
    <string name="fftlen">FFT LEN</string>
    <string name="ave">N AVE</string>
    <string name="sample_rates_name">SAMPLE/S::0</string>
    <string name="fft_len_name">FFT LEN::0</string>
    <string name="fft_ave_num_name">N AVE::0</string>
    <string name="button_freq_scaling_mode">linear::log::note</string>
    <string name="button_run">run::stop</string>
    <string name="button_dbA">dB::dBA</string>
    <string name="button_spectrum_spectrogram_mode">1D::2D</string>
    <string name="button_recording">Mon::Rec</string>

    <!-- permission dialog -->
    <string name="permission_explanation_title">Permission denied</string>
    <string name="permission_explanation_recorder">This app analyze the sound heard by *this* device. A permission of using microphone is required.</string>
    <string name="permission_explanation_write">To record the sound, A permission of using read/write is required.</string>

    <!-- Show range dialog -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="show_range_tv_fL">"Set lower and upper Frequency Bound"</string>
    <string name="show_range_tv_fH">"(%1$.2f&lt;= Hz &lt;=%2$.2f)"</string>
    <string name="show_range_tv_dBL">"Set lower and upper dB Bound"</string>
    <string name="show_range_tv_dBH">"(%1$.2f&lt;= dB &lt;=%2$.2f)"</string>
    <string name="et_freq_setting_lower_bound">frequency lower bound</string>
    <string name="et_freq_setting_upper_bound">frequency upper bound</string>
    <string name="et_db_setting_lower_bound">dB lower bound</string>
    <string name="et_db_setting_upper_bound">dB upper bound</string>
    <string name="show_range_lock">Lock Range</string>
    <string name="show_range_button_lock">Load Previous</string>

    <!-- spectrum 1D graph appearance dialog -->
    <string name="set_spectrum_1d_graph_appearance_title">Spectrum appearance</string>
    <string name="set_spectrum_1d_graph_appearance_description">Colors, line widths etc. for the 1D spectrum plot</string>

    <!-- Pop-up menu -->
    <string name="menu_manual">User Manual</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_test">Recorder Sources Test</string>
    <string name="menu_set_view">View Range Setting</string>
    <string name="menu_manual_condensed">Manual</string>
    <string name="menu_preferences_condensed">Preferences</string>
    <string name="menu_test_condensed">Test</string>
    <string name="menu_set_view_condensed">Set View</string>

    <!-- InfoRecActivity (Test Recorder Sources) -->
    <string name="text_view_info_log_0">Testing AudioRecord properties..</string>
    <string name="title_activity_info_rec">Info of Input Audio</string>
    <string name="rec_tester_std">Standard Sources</string>
    <string name="rec_tester_support">Supported Sources</string>
    <string name="rec_tester_all">All Sources</string>
    <string name="rec_tester_hint1">"(Only test MONO, 16BIT format)\n"</string>
    <string name="rec_tester_col1">"\nSampleRate MinBuf    (Time)\n"</string>
    <string name="rec_tester_col2">"%1$5d Hz  %2$4d Bytes (%3$4.1f ms)\n"</string>
    <string name="rec_tester_error1">" Hz  ERROR\n"</string>
    <string name="rec_tester_hint2">"\n--- Audio Source Test ---\n"</string>
    <string name="rec_tester_col3">"\nSource: %1$s\n"</string>
    <string name="rec_tester_col3_row1">"%1$5d Hz  "</string>
    <string name="rec_tester_col3_succeed">"succeed"</string>
    <string name="rec_tester_col3_error1">"Illegal Argument"</string>
    <string name="rec_tester_col3_error2">"read 0 byte"</string>
    <string name="rec_tester_col3_error3">"fail to read sample"</string>
    <string name="rec_tester_col3_error4">"fail to initialize"</string>
    <string name="rec_tester_col3_hint1">"(source alter: %1$s)"></string>
    <string name="rec_tester_col3_end">".\n"</string>
    <string name="True">true</string>

    <!-- preferences -->
    <string name="preference_generalSettings">General Settings</string>
    <string name="preference_keepScreenOn_1">Prevent display from turning off</string>
    <string name="preference_keepScreenOn_2">Keep screen on</string>
    <string name="preference_audioSource_1">Audio source for spectrum</string>
    <string name="preference_audioSource_2">Audio source</string>
    <string name="preference_windowFunction_1">Window function for (local) short-time Fourier transform (STFT)</string>
    <string name="preference_windowFunction_2">Window Function</string>
    <string name="preference_windowOverlap_1">Higher percentage for finer time resolution, lower to save CPU</string>
    <string name="preference_windowOverlap_2">Time window overlap</string>
    <string name="preference_spectrumAppearance">Spectrum appearance</string>
    <string name="preference_showLines_1">Use lines instead of bars (area) for spectrum</string>
    <string name="preference_showLines_2">Spectrum uses lines</string>
    <string name="preference_spectrumRange_1">Show range of spectrum in dB scale</string>
    <string name="preference_spectrumRange_2">Spectrum range scale</string>
    <string name="preference_spectrogramAppearance">Spectrogram appearance</string>
    <string name="preference_spectrogramShifting_1">The whole spectrogram shifts on a rolling basis over time</string>
    <string name="preference_spectrogramShifting_2">Spectrogram shifting</string>
    <string name="preference_spectrogramTimeAxis_1">Turns on/off time axis label</string>
    <string name="preference_spectrogramTimeAxis_2">Show time axis</string>
    <string name="preference_spectrogramShowFreqAlongX_1">So time axis is Y axis</string>
    <string name="preference_spectrogramShowFreqAlongX_2">Frequency as X axis</string>
    <string name="preference_spectrogramSmoothRender_1">Smoothly render the spectrogram</string>
    <string name="preference_spectrogramSmoothRender_2">Smooth render</string>
    <string name="preference_spectrogramColorMap_1">Choose color of dB to map</string>
    <string name="preference_spectrogramColorMap_2">Color Map</string>
    <string name="preference_spectrogramRange_1">Show range of spectrogram in dB scale</string>
    <string name="preference_spectrogramRange_2">Spectrogram range</string>
    <string name="preference_spectrogramDuration_1">Show duration of spectrogram (when average number is set to 1)</string>
    <string name="preference_spectrogramDuration_2">Spectrogram duration</string>
    <string name="preference_spectrogramFPS_1">Higher for smoother graphic, lower to save battery.</string>
    <string name="preference_spectrogramFPS_2">Limit Refresh rate</string>
    <string name="preference_miscellaneous">Miscellaneous</string>
    <string name="preference_warnOverrun_1">Show warning if audio buffer enters overrun state</string>
    <string name="preference_warnOverrun_2">Overrun Warning</string>
    <string name="preference_developerSetting">Developer Settings</string>
    <string name="preference_spectrogramLogPlotMethod_1">Replot spectrogram only while zooming (Saves battery)</string>
    <string name="preference_spectrogramLogPlotMethod_2">Log plot: Replot on zoom</string>

</resources>
