<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/show_range_tv_fL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/show_range_tv_fL" />

    <TextView
        android:id="@+id/show_range_tv_fH"
        android:layout_below="@id/show_range_tv_fL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/show_range_tv_fH" />

    <!-- Somehow android:layout_height="wrap_content" not working correctly on low resolution device -->
    <EditText
        android:id="@+id/et_freq_setting_lower_bound"
        android:layout_below="@id/show_range_tv_fH"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="5dp"
        android:maxEms="6"
        android:inputType="numberDecimal"
        android:hint="@string/et_freq_setting_lower_bound" />

    <EditText
        android:id="@+id/et_freq_setting_upper_bound"
        android:layout_below="@id/show_range_tv_fH"
        android:layout_toRightOf="@id/et_freq_setting_lower_bound"
        android:layout_toEndOf="@id/et_freq_setting_lower_bound"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="5dp"
        android:maxEms="6"
        android:inputType="numberDecimal"
        android:hint="@string/et_freq_setting_upper_bound" />

    <TextView
        android:id="@+id/show_range_tv_dBL"
        android:layout_below="@+id/et_freq_setting_upper_bound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/show_range_tv_dBL"/>

    <TextView
        android:id="@+id/show_range_tv_dBH"
        android:layout_below="@+id/show_range_tv_dBL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:text="@string/show_range_tv_dBH"/>

    <EditText
        android:id="@+id/et_db_setting_lower_bound"
        android:layout_below="@+id/show_range_tv_dBH"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="5dp"
        android:maxEms="6"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/et_db_setting_lower_bound" />

    <EditText
        android:id="@+id/et_db_setting_upper_bound"
        android:layout_below="@+id/show_range_tv_dBH"
        android:layout_toRightOf="@id/et_freq_setting_lower_bound"
        android:layout_toEndOf="@id/et_freq_setting_lower_bound"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginTop="5dp"
        android:maxEms="6"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/et_db_setting_upper_bound" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_below="@+id/et_db_setting_upper_bound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal" >

        <CheckBox android:id="@+id/show_range_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:text="@string/show_range_lock" />

        <Button android:id="@+id/show_range_button_load"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="1dp"
            android:textSize="16sp"
            android:text="@string/show_range_button_lock" />

    </LinearLayout>

</RelativeLayout>